# ME461_Projects

./: README.md
DC Motor Lab/: design.py  main.py
Encoder Lab/: encoder.py
Servo Lab/: gui.py  main.py  step3.py  step4.py
SnakeGame/snake_game/: package.xml  setup.cfg  setup.py
SnakeGame/snake_game/snake_game/: deneme.py  main.py  target.py
SnakeGame/tutorial_interfaces/: CMakeLists.txt  package.xml
SnakeGame/tutorial_interfaces/msg/: Direction.msg  Position.msg  Target.msg
Stepper Lab/: GUI  README.md  READMME.md  design.py  pc.py  pico.py
Term Project/: Readme.md  cell_values.txt  design.py  gui.py  main.py  marker.py  timer_service.py
Term Project/Deneme/: cost_search.py  new_planner.py  search.py  search_noui.py
Term Project/ros_pkg/project_pkg/: a.py  package.xml  setup.py
Week_2_Ball_Catching/: AppleCatch.py
Week_3_Ball_Bouncing/: ball.py  detection.py  ekran.py  main.py  target.py
Week_4_BallGame_ROS2/: ball_left.py  ball_right.py
Week_5_Snake_Game/: game_engine.py  grid.py  main.py  params.yaml  snake.py  target.py
Week_6_Search/: grid.py  main.py  object.py
Week_6_Search/A-star/: grid_astar.py
Week_6_Search/Breadth-First/: grid_bfs.py  main.py
Week_6_Search/Depth-First/: main.py  object.py
Week_6_Search/Greedy/: grid_greedy.py
Week_6_Search/Search/: grid.py  main.py
Week_6_Search/Uniform-Cost/: grid_ucs.py
Week_7_picoW/: main.py
Week_8_picoW/: hwx.py
termProject461/: Presentation1.pptx  design.ui  main.py  videodetection.py
termProject461/wlan deneme/: wlan pc.py
(+16 files in other folders)
