<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snake_game</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="me461@todo.todo">me461</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>pygame</depend>
  <depend>sys</depend>
  <depend>time</depend>
  <depend>random</depend>
  <depend>grid</depend>
  <depend>snake</depend>
  <depend>target</depend>
  <depend>game_engine</depend>
  <exec_depend>tutorial_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
